--- a/BrastleWark/Base.lproj/Main.storyboard
+++ b/BrastleWark/Base.lproj/Main.storyboard
@@ -331,8 +331,8 @@
                             <constraint firstItem="wBo-UK-53A" firstAttribute="trailing" secondItem="Ye2-NW-CQO" secondAttribute="trailing" constant="28" id="1Rs-p4-9JO"/>
                             <constraint firstItem="L9j-ZS-3R1" firstAttribute="top" secondItem="GVc-yA-nKe" secondAttribute="bottom" constant="8" id="5BK-2Z-iy2"/>
                             <constraint firstItem="Zy9-C2-8Hu" firstAttribute="leading" secondItem="wBo-UK-53A" secondAttribute="leading" constant="29" id="75l-So-wRC"/>
+                            <constraint firstItem="ySV-5Q-cDF" firstAttribute="leading" secondItem="wBo-UK-53A" secondAttribute="leading" constant="100" id="7Ws-as-9RR"/>
                             <constraint firstItem="S8m-0j-Fw2" firstAttribute="top" secondItem="Pgb-WS-weB" secondAttribute="bottom" constant="28" id="7nw-i7-ven"/>
-                            <constraint firstItem="ySV-5Q-cDF" firstAttribute="centerX" secondItem="9nW-RF-FeD" secondAttribute="centerX" id="9ST-2y-40t"/>
                             <constraint firstItem="L9j-ZS-3R1" firstAttribute="leading" secondItem="wBo-UK-53A" secondAttribute="leading" constant="29" id="Gq2-WW-OGc"/>
                             <constraint firstItem="wBo-UK-53A" firstAttribute="trailing" secondItem="Pgb-WS-weB" secondAttribute="trailing" constant="16" id="ID0-WC-Dys"/>
                             <constraint firstItem="XNB-XF-ixj" firstAttribute="top" secondItem="L9j-ZS-3R1" secondAttribute="bottom" constant="8" id="JYp-Hm-klZ"/>
@@ -342,6 +342,7 @@
                             <constraint firstItem="S8m-0j-Fw2" firstAttribute="bottom" secondItem="wBo-UK-53A" secondAttribute="bottom" id="YQZ-4Y-gYz"/>
                             <constraint firstItem="XNB-XF-ixj" firstAttribute="leading" secondItem="wBo-UK-53A" secondAttribute="leading" constant="29" id="a6E-KK-FAh"/>
                             <constraint firstItem="Ye2-NW-CQO" firstAttribute="leading" secondItem="wBo-UK-53A" secondAttribute="leading" constant="29" id="cO2-gP-Xuu"/>
+                            <constraint firstItem="wBo-UK-53A" firstAttribute="trailing" secondItem="ySV-5Q-cDF" secondAttribute="trailing" constant="100" id="cgk-o0-QeU"/>
                             <constraint firstItem="wBo-UK-53A" firstAttribute="trailing" secondItem="GVc-yA-nKe" secondAttribute="trailing" constant="28" id="com-sf-N4Q"/>
                             <constraint firstItem="GVc-yA-nKe" firstAttribute="leading" secondItem="wBo-UK-53A" secondAttribute="leading" constant="29" id="cwh-9k-3bN"/>
                             <constraint firstItem="GVc-yA-nKe" firstAttribute="top" secondItem="Zy9-C2-8Hu" secondAttribute="bottom" constant="8" id="gZO-s0-6ou"/>
