--- a/BrastleWark/Base.lproj/Main.storyboard
+++ b/BrastleWark/Base.lproj/Main.storyboard
@@ -248,7 +248,7 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ySV-5Q-cDF">
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ySV-5Q-cDF">
                                 <rect key="frame" x="100" y="47" width="120" height="120"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="120" id="DPJ-7R-8t6"/>
